[tool.poetry]
name = "dev"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.18.56"
requests = "^2.26.0"
docker = "^5.0.2"
Flask = "^2.0.2"
Flask-API = "^3.0.post1"

[tool.poetry.dev-dependencies]
selenium = "^4.0.0"
pymongo = "^3.12.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
