[tool.poetry]
name = "reusable-data-service"
version = "0.1.0"
description = "A scalable, extensible application server for CRUD operations on line list data for infectious disease outbreaks."
authors = ["Global.health <info@global.health>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
