[tool.poetry]
name = "data_service"
version = "0.1.0"
description = "A scalable, extensible application server for CRUD operations on line list data for infectious disease outbreaks."
authors = ["Global.health <info@global.health>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
pymongo = {extras = ["srv"], version = "^4.1.1"}
geojson = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mongomock = "^4.0.0"
black = "^22.6.0"
freezegun = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
