[tool.poetry]
name = "monitoring"
version = "0.1.0"
description = "Monitoring functions for Global.health ingestion"
authors = ["Global.health <info@global.health>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.21.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
