[tool.poetry]
name = "gdh_kubemon"
version = "0.1.0"
description = "Monitor Global.health Kubernetes for pending pods"
authors = ["Global.health <info@global.health>"]

[tool.poetry.dependencies]
python = "^3.10"
kubernetes = "19.*"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
