[tool.poetry]
name = "aggregate"
version = "0.1.0"
description = "Prepare aggregate data from the line list for the map."
authors = ["Global.health <info@global.health>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "1.16.60"
pymongo = "3.11.2"
dnspython = "2.1.0"
pandas = "^1.3.4"
iso3166 = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
